[gd_scene load_steps=55 format=3 uid="uid://vokqybover7a"]

[ext_resource type="Script" uid="uid://begt24v412osf" path="res://enemies/normal_zombie/zombie.gd" id="1_o8ulx"]
[ext_resource type="Texture2D" uid="uid://ce75dyy1700g1" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_0.png" id="2_ejn0j"]
[ext_resource type="Resource" uid="uid://cvwko1e64bdyu" path="res://data/damage/bite.tres" id="2_s4a6i"]
[ext_resource type="Texture2D" uid="uid://cax1mw5owy82y" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_1.png" id="3_rh77v"]
[ext_resource type="Texture2D" uid="uid://0scrxk40dsh2" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_2.png" id="4_r1skj"]
[ext_resource type="Texture2D" uid="uid://bbw6ophu1how3" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_3.png" id="5_qy8b2"]
[ext_resource type="Texture2D" uid="uid://c5m8mg5w1dsa6" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_4.png" id="6_7h3wa"]
[ext_resource type="Texture2D" uid="uid://bgodtb1c6ns8n" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_5.png" id="7_esffx"]
[ext_resource type="Texture2D" uid="uid://c31hvxrsgd5nf" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_6.png" id="8_1xno8"]
[ext_resource type="Texture2D" uid="uid://cy25f2moybd8r" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_7.png" id="9_vmx0t"]
[ext_resource type="Texture2D" uid="uid://racmyxqffdo2" path="res://enemies/normal_zombie/assets/sprites/skeleton-attack_8.png" id="10_q0bnk"]
[ext_resource type="Texture2D" uid="uid://cfgeoon6igxjj" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_0.png" id="11_etrbm"]
[ext_resource type="Texture2D" uid="uid://bo4cke4iwywrg" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_1.png" id="12_ns15b"]
[ext_resource type="Texture2D" uid="uid://canjwbk2gg55g" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_2.png" id="13_uibmr"]
[ext_resource type="Texture2D" uid="uid://c51f0s2inbssq" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_3.png" id="14_lds20"]
[ext_resource type="Texture2D" uid="uid://db0j0yr35bhne" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_4.png" id="15_roomf"]
[ext_resource type="Texture2D" uid="uid://ct3istg3vhex2" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_5.png" id="16_mf1ll"]
[ext_resource type="Texture2D" uid="uid://cm7eb6ac1kg3s" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_6.png" id="17_n7tix"]
[ext_resource type="Texture2D" uid="uid://3ae773hib5ta" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_7.png" id="18_umjv8"]
[ext_resource type="Texture2D" uid="uid://drtnebcm6vsg0" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_8.png" id="19_fgcpt"]
[ext_resource type="Texture2D" uid="uid://cvjh0ngo2s625" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_9.png" id="20_vaekn"]
[ext_resource type="Texture2D" uid="uid://cyhssg1s276ix" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_10.png" id="21_fvo0c"]
[ext_resource type="Texture2D" uid="uid://jmodp56f7end" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_11.png" id="22_g8odr"]
[ext_resource type="Texture2D" uid="uid://du2irateessf2" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_12.png" id="23_wbioe"]
[ext_resource type="Texture2D" uid="uid://rvcxgntrah38" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_13.png" id="24_oyl25"]
[ext_resource type="Texture2D" uid="uid://seigl2olw26d" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_14.png" id="25_a6heu"]
[ext_resource type="Texture2D" uid="uid://do57rgj8ky8go" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_15.png" id="26_377w4"]
[ext_resource type="Texture2D" uid="uid://c56aknxv32www" path="res://enemies/normal_zombie/assets/sprites/skeleton-idle_16.png" id="27_5oj7y"]
[ext_resource type="Texture2D" uid="uid://hk3jre8vrar4" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_0.png" id="28_bomp6"]
[ext_resource type="Texture2D" uid="uid://cwftf0ybiyna5" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_1.png" id="29_6kb64"]
[ext_resource type="Texture2D" uid="uid://pv3n8kwwdrx5" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_2.png" id="30_n75m8"]
[ext_resource type="Texture2D" uid="uid://btejlkrlwtxks" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_3.png" id="31_vn58t"]
[ext_resource type="Texture2D" uid="uid://cx3ic5rthx6tg" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_4.png" id="32_aficm"]
[ext_resource type="Texture2D" uid="uid://cg663kwjbe60h" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_5.png" id="33_wvks2"]
[ext_resource type="Texture2D" uid="uid://cbirkggcpyhpp" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_6.png" id="34_jqaga"]
[ext_resource type="Texture2D" uid="uid://dm5rknf3v8fdk" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_7.png" id="35_8smpj"]
[ext_resource type="Texture2D" uid="uid://bpjmmdiuhb06j" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_8.png" id="36_sddnv"]
[ext_resource type="Texture2D" uid="uid://q7s4egmaul5n" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_9.png" id="37_2cvmr"]
[ext_resource type="Texture2D" uid="uid://b3v7vfvnpikr0" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_10.png" id="38_qhuv1"]
[ext_resource type="Texture2D" uid="uid://3ceja2um2tvc" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_11.png" id="39_mwiyu"]
[ext_resource type="Texture2D" uid="uid://cfhd02hckfj72" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_12.png" id="40_rf2ou"]
[ext_resource type="Texture2D" uid="uid://ui8virf0okmx" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_13.png" id="41_vyc1q"]
[ext_resource type="Texture2D" uid="uid://day66adrj4qwt" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_14.png" id="42_e71gi"]
[ext_resource type="Texture2D" uid="uid://kiktqlkdei4f" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_15.png" id="43_f1cxl"]
[ext_resource type="Texture2D" uid="uid://cuna2fbqb7467" path="res://enemies/normal_zombie/assets/sprites/skeleton-move_16.png" id="44_hdt6u"]
[ext_resource type="AudioStream" uid="uid://bqj4wx6fc2b4v" path="res://enemies/normal_zombie/assets/sounds/zombie-1.mp3" id="45_nt878"]
[ext_resource type="AudioStream" uid="uid://ddqrotsf8ixq0" path="res://enemies/normal_zombie/assets/sounds/zombie-2.ogg" id="46_pldpq"]
[ext_resource type="AudioStream" uid="uid://d6vta3c1tkx3" path="res://enemies/normal_zombie/assets/sounds/zombie-3.mp3" id="47_3a0ka"]
[ext_resource type="AudioStream" uid="uid://costfcatmftjp" path="res://enemies/normal_zombie/assets/sounds/attack.wav" id="48_15cxu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ls26a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ejn0j")
}, {
"duration": 1.0,
"texture": ExtResource("3_rh77v")
}, {
"duration": 1.0,
"texture": ExtResource("4_r1skj")
}, {
"duration": 1.0,
"texture": ExtResource("5_qy8b2")
}, {
"duration": 1.0,
"texture": ExtResource("6_7h3wa")
}, {
"duration": 1.0,
"texture": ExtResource("7_esffx")
}, {
"duration": 1.0,
"texture": ExtResource("8_1xno8")
}, {
"duration": 1.0,
"texture": ExtResource("9_vmx0t")
}, {
"duration": 1.0,
"texture": ExtResource("10_q0bnk")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_etrbm")
}, {
"duration": 1.0,
"texture": ExtResource("12_ns15b")
}, {
"duration": 1.0,
"texture": ExtResource("13_uibmr")
}, {
"duration": 1.0,
"texture": ExtResource("14_lds20")
}, {
"duration": 1.0,
"texture": ExtResource("15_roomf")
}, {
"duration": 1.0,
"texture": ExtResource("16_mf1ll")
}, {
"duration": 1.0,
"texture": ExtResource("17_n7tix")
}, {
"duration": 1.0,
"texture": ExtResource("18_umjv8")
}, {
"duration": 1.0,
"texture": ExtResource("19_fgcpt")
}, {
"duration": 1.0,
"texture": ExtResource("20_vaekn")
}, {
"duration": 1.0,
"texture": ExtResource("21_fvo0c")
}, {
"duration": 1.0,
"texture": ExtResource("22_g8odr")
}, {
"duration": 1.0,
"texture": ExtResource("23_wbioe")
}, {
"duration": 1.0,
"texture": ExtResource("24_oyl25")
}, {
"duration": 1.0,
"texture": ExtResource("25_a6heu")
}, {
"duration": 1.0,
"texture": ExtResource("26_377w4")
}, {
"duration": 1.0,
"texture": ExtResource("27_5oj7y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_bomp6")
}, {
"duration": 1.0,
"texture": ExtResource("29_6kb64")
}, {
"duration": 1.0,
"texture": ExtResource("30_n75m8")
}, {
"duration": 1.0,
"texture": ExtResource("31_vn58t")
}, {
"duration": 1.0,
"texture": ExtResource("32_aficm")
}, {
"duration": 1.0,
"texture": ExtResource("33_wvks2")
}, {
"duration": 1.0,
"texture": ExtResource("34_jqaga")
}, {
"duration": 1.0,
"texture": ExtResource("35_8smpj")
}, {
"duration": 1.0,
"texture": ExtResource("36_sddnv")
}, {
"duration": 1.0,
"texture": ExtResource("37_2cvmr")
}, {
"duration": 1.0,
"texture": ExtResource("38_qhuv1")
}, {
"duration": 1.0,
"texture": ExtResource("39_mwiyu")
}, {
"duration": 1.0,
"texture": ExtResource("40_rf2ou")
}, {
"duration": 1.0,
"texture": ExtResource("41_vyc1q")
}, {
"duration": 1.0,
"texture": ExtResource("42_e71gi")
}, {
"duration": 1.0,
"texture": ExtResource("43_f1cxl")
}, {
"duration": 1.0,
"texture": ExtResource("44_hdt6u")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ls26a"]
radius = 57.0088

[sub_resource type="CircleShape2D" id="CircleShape2D_w25mp"]
radius = 148.054

[sub_resource type="CircleShape2D" id="CircleShape2D_maxkh"]
radius = 108.167

[sub_resource type="CircleShape2D" id="CircleShape2D_s25so"]
radius = 136.0

[node name="Zombie" type="CharacterBody2D" groups=["damagable", "enemies"]]
scale = Vector2(0.25, 0.25)
collision_layer = 2
collision_mask = 77
script = ExtResource("1_o8ulx")
damage = ExtResource("2_s4a6i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ls26a")
animation = &"idle"

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(-39, 12)
shape = SubResource("CircleShape2D_ls26a")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 73

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
position = Vector2(-6, 29)
shape = SubResource("CircleShape2D_w25mp")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(4, 20)
shape = SubResource("CircleShape2D_maxkh")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 180.0

[node name="ZombieSounds" type="Node2D" parent="."]

[node name="Moan1" type="AudioStreamPlayer2D" parent="ZombieSounds"]
stream = ExtResource("45_nt878")
parameters/looping = true

[node name="Moan2" type="AudioStreamPlayer2D" parent="ZombieSounds"]
stream = ExtResource("46_pldpq")
parameters/looping = true

[node name="Moan3" type="AudioStreamPlayer2D" parent="ZombieSounds"]
stream = ExtResource("47_3a0ka")
parameters/looping = true

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-12, 10)
stream = ExtResource("48_15cxu")

[node name="AlertTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="BiteHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 73

[node name="BiteHitBoxCollision" type="CollisionShape2D" parent="BiteHitbox"]
position = Vector2(0, 24)
shape = SubResource("CircleShape2D_s25so")
disabled = true

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_attack_radius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_attack_radius_body_exited"]
[connection signal="timeout" from="AlertTimer" to="." method="_on_alert_timer_timeout"]
[connection signal="area_entered" from="BiteHitbox" to="." method="deal_damage"]
[connection signal="area_exited" from="BiteHitbox" to="." method="deal_damage"]
[connection signal="body_entered" from="BiteHitbox" to="." method="deal_damage_body"]
